Implements authentication functionality
Adds authentication routes and refresh token functionality.

This change introduces user authentication using JWTs, including:

- Adds JWT-related environment variables for secret key and expiration times.
- Implements refresh token functionality for maintaining user sessions.
- Creates a `refresh_tokens` table in the Prisma schema to store refresh tokens.
- Introduces new authentication routes and integrates them into the application.

--- a/.env.template
+++ b/.env.template
@@ -15,4 +15,6 @@ DB_PORT=your_port_here
 DB_NAME=your_db_name_here
 
 # JWT Configuration
-JWT_SECRET=your_super_secret_key_here
+JWT_SECRET=your_super_secret_key_here_minimum_32_characters
+JWT_EXPIRES_IN=15m
+REFRESH_TOKEN_EXPIRES_IN=7d
