--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "prisma": "5.10.2"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
