Refactors health check into dedicated route
Moves the health check endpoint to a dedicated route within the application.

This change improves application structure and promotes separation of concerns by encapsulating health check logic. It also changes the main entry point of the application to `src/app.js` from `src/index.js`.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "gemaacademy-api",
   "version": "1.0.0",
   "description": "Gema Academy API",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --watch src/index.js",
+    "start": "node src/app.js",
+    "dev": "node --watch src/app.js",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "node --test"
