--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
-    "prisma": "5.10.2"
+    "prisma": "5.10.2",
+    "zod": "^4.3.6"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
