--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Gema Academy API",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "node --watch src/app.js",
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "node --test"
