--- a/.env.template
+++ b/.env.template
@@ -17,4 +17,8 @@ DB_NAME=your_db_name_here
 # JWT Configuration
 JWT_SECRET=your_super_secret_key_here_minimum_32_characters
 JWT_EXPIRES_IN=15m
-REFRESH_TOKEN_EXPIRES_IN=7d
+REFRESH_TOKEN_EXPIRATION_DAYS=7
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000
+CORS_CREDENTIALS=true
