feat: Implement initial API structure with modular features, authentication, authorization, validation, and database seeding.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-
   postgres:
     image: postgres:15-alpine
     container_name: gema_academy_db
@@ -11,11 +10,11 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: gema_academy_db
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
