--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
   "name": "gemaacademy-api",
   "version": "1.0.0",
-  "description": "Gema Academy API",
-  "main": "src/app.js",
+  "description": "API REST para GemaAcademy - Sistema de gestión de academia deportiva",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "test": "node --test"
+    "format:check": "prettier --check .",
+    "test": "node --test",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:prod": "prisma migrate deploy",
+    "db:seed": "prisma db seed",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset"
   },
-  "keywords": [],
-  "author": "Gema Academy",
+  "keywords": [
+    "api",
+    "rest",
+    "express",
+    "prisma",
+    "postgresql",
+    "jwt",
+    "authentication"
+  ],
+  "author": "Gema Academy Team",
   "license": "MIT",
-  "type": "module",
   "devDependencies": {
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^17.0.0",
-    "prettier": "^3.8.0"
+    "prettier": "^3.8.0",
+    "prisma": "5.10.2"
   },
   "dependencies": {
     "@prisma/client": "5.10.2",
@@ -30,10 +47,13 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
-    "prisma": "5.10.2",
     "zod": "^3.23.8"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
