--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
+    "winston": "^3.19.0",
     "zod": "^3.23.8"
   },
   "prisma": {
